Bug 667077 - Add atob/btoa to frame scripts. r=smaug