content/base/public/nsContentUtils.h
@@ -1724,6 +1724,13 @@ public:
    * ontouch* event handler DOM attributes.
    */
   static void InitializeTouchEventTable();
+
+  static nsresult Btoa(const nsAString& aBinaryData,
+                       nsAString& aAsciiBase64String);
+
+  static nsresult Atob(const nsAString& aAsciiString,
+                       nsAString& aBinaryData);
+  
 private:
   static PRBool InitializeEventTable();
 
