content/base/src/nsInProcessTabChildGlobal.h
@@ -78,6 +78,11 @@ public:
     return mMessageManager ? mMessageManager->Dump(aStr) : NS_OK;
   }
   NS_IMETHOD PrivateNoteIntentionalCrash();
+  NS_IMETHOD Btoa(const nsAString& aBinaryData,
+                  nsAString& aAsciiBase64String);
+  NS_IMETHOD Atob(const nsAString& aAsciiString,
+                  nsAString& aBinaryData);
+
   NS_DECL_NSIINPROCESSCONTENTFRAMEMESSAGEMANAGER
 
   virtual nsresult PreHandleEvent(nsEventChainPreVisitor& aVisitor);
